Fix horizontal scrolling issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,7 @@
 body {
   background: $dark;
 }
+
+main#root {
+  overflow-x: hidden;
+}
