--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -9,4 +9,8 @@ $white: #DADADA;
 
 .ui.inverted.menu .item.primary {
   color: $primary;
+
+  a {
+    color: $primary;
+  }
 }
